<resources>
    <string name="version">版本</string>
    <string name="version_summary">1.0.9</string>
    <string name="app_name">Material Daily</string>
    <string name="developer">作者</string>
    <string name="developer_name">傅堯</string>
    <string name="location">沈阳,辽宁</string>
    <string name="star_me_zhihu">在知乎关注我</string>
    <string name="developer_at_zhihu">"@傅堯"</string>
    <string name="support">支持</string>
    <string name="support_detail">意见反馈</string>
    <string name="github_address">github地址</string>
    <string name="open_resource_license">开源许可</string>

    <!--设置模块-->
    <string name="settings">设置</string>
    <string name="setting_basic">基本设置</string>
    <string name="setting_no_pic">无图模式</string>
    <string name="setting_no_pic_summary_on"></string>
    <string name="setting_no_pic_summary_off"></string>
    <string name="setting_hide_function">隐藏功能</string>
    <string name="setting_hide_function_off">满18岁才可以开启哦~</string>
    <string name="setting_hide_function_on">请谨慎驾驶~</string>
    <string name="setting_other">其他设置</string>
    <string name="setting_clear_pic_cache">清除图片缓存</string>
    <string name="setting_hide_fab">隐藏浮动按钮</string>
    <string name="setting_hide_fab_on"></string>
    <string name="setting_choose_cache_storage_life">设置缓存时效</string>

    <string name="feedback">反馈</string>
    <string name="bottom_nav_0">news</string>
    <string name="bottom_nav_1">article</string>
    <string name="bottom_nav_2">selected</string>
    <string name="toolbar_name">文章列表</string>
    <string name="confirm">确定</string>
    <string name="back_to_today">回今天</string>
    <string name="cancel">取消</string>
    <string name="menu_settings">设置</string>
    <string name="title_today">daily news</string>
    <string name="title_theme">主题日报</string>
    <string name="title_past">往期日报</string>
    <string name="title_one_moment">one moment articles</string>
    <string name="title_guokr">selected</string>
    <string name="about">关于</string>
    <string name="activity_large_pic">查看大图</string>
    <string name="gank_girls">福利列表</string>
    <string name="activity_about">关于</string>
    <string name="activity_web">文章详情</string>
    <string name="activity_theme_news">主题新闻列表</string>
    <string name="activity_main">主页</string>
    <string name="clear_cache_done">清除成功</string>

    <string name="save_img">保存图片</string>
    <string name="share">分享</string>

    <string name="feedback_msg">MaterialDaily的使用反馈</string>
    <string name="double_click_quit">再按一次退出程序</string>


</resources>
