<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/setting_basic">

        <SwitchPreference
            android:title="@string/setting_hide_function"
            android:key="hide_function"
            android:defaultValue="false"
            android:summaryOff="@string/setting_hide_function_off"
            android:summaryOn="@string/setting_hide_function_on"></SwitchPreference>
        <SwitchPreference
            android:title="@string/setting_no_pic"
            android:key="no_pic_mode"
            android:defaultValue="false"
            android:summaryOn="@string/setting_no_pic_summary_on"
            android:summaryOff="@string/setting_no_pic_summary_off"></SwitchPreference>
        <SwitchPreference
            android:title="@string/setting_hide_fab"
            android:key="hide_fab"
            android:defaultValue="false"
            ></SwitchPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/setting_other">
        <ListPreference
            android:title="@string/setting_choose_cache_storage_life"
            android:key="choose_cache_storage_life"
            android:defaultValue="@string/list_preference_15"
            android:entries="@array/array_choose_cache_storage_life"
            android:entryValues="@array/array_choose_cache_storage_life_value"></ListPreference>
        <Preference
            android:title="@string/setting_clear_pic_cache"
            android:key="clear_pic_cache"></Preference>
    </PreferenceCategory>
</PreferenceScreen>